--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html {
   background-image:url(../images/blue2.jpg);
 }
 
-.alert {
+.alert {S
   position: relative;
   padding: 0.75rem 1.25rem;
   vertical-align: middle;
