change login page

--- a/css/style.css
+++ b/css/style.css
@@ -1,133 +1,223 @@
-@import url(https://fonts.googleapis.com/css?family=Tenor+Sans);
-@import url(http://weloveiconfonts.com/api/?family=fontawesome);
-@import url(https://fonts.googleapis.com/css?family=Roboto&display=swap);
+@import url("https://fonts.googleapis.com/css?family=Nunito:400,600,700");
+* {
+  box-sizing: border-box;
+}
 
-html {
+body {
+  font-family: "Nunito", sans-serif;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+
+
+.modal {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 160px;
   
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   
-  /*background-image:url(../images/PSR2.jpg);*/
+}
+.modal-container {
+  display: flex;
+  max-width: 720px;
+  width: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+  position: absolute;
+  opacity: 0;
+  pointer-events: none;
+  
+  background: #fff;
+
+}
+.modal-title {
+  font-size: 26px;
+  margin: 0;
+  font-weight: 400;
+  color: #000;
+}
+.modal-desc {
+  margin: 6px 0 30px 0;
+}
+.modal-left {
+  padding: 60px 30px 20px;
+  background: #fff;
+  flex: 1.5;
+  
+
+  opacity: 0;
+}
+.modal-button {
+  color: #7d695e;
+  font-family: "Nunito", sans-serif;
+  font-size: 18px;
+  cursor: pointer;
+  border: 0;
+  outline: 0;
+  padding: 10px 40px;
+  border-radius: 30px;
+  background: white;
+
+  
+}
+.modal-button:hover {
+  border-color: rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.8);
+}
+.modal-right {
+  flex: 2;
+  font-size: 0;
+  
+  overflow: hidden;
+}
+.modal-right img {
+  width: 100%;
+  height: 100%;
+
+
+
+}
+.modal.is-open {
+  height: 100%;
+  /*background: #151F34;*/
   background-image:url(../images/blue2.jpg);
 }
-
-.alert {S
-  position: relative;
-  padding: 0.75rem 1.25rem;
-  vertical-align: middle;
-    width: 150px;
-  /*margin-bottom: 1rem;*/
-  border: 1px solid transparent;
-  border-radius: 0.25rem;
+.modal.is-open .modal-button {
+  opacity: 0;
 }
+.modal.is-open .modal-container {
+  opacity: 1;
 
-.alert-danger {
-  color: #721c24;
-  font: roboto;
-  background-color: #f8d7da;
-  border-color: #f5c6cb;
-  font-size: 12px;
-  font: 400 13.3333px Arial;
-}
-
-.container {
-  width: 500px;
-  height: 400px;
-  margin: 0 auto;
-  /*vertical-align: middle;*/
+  pointer-events: auto;
 
 }
+.modal.is-open .modal-right img {
 
-.login {
-  /*margin-top: 50px;*/
-  margin-top: 50vh; /* poussé de la moitié de hauteur de viewport */
-  transform: translateY(-50%); /* tiré de la moitié de sa propre hauteur */
-  width: 450px;
 }
+.modal.is-open .modal-left {
 
-.simple-text
-{
-  font: roboto;
-  color: white;
+  opacity: 1;
+
 }
-.simple-text12
-{
-  font-size: 12px;
-  font: roboto;
-  color: white;
+.modal-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.modal-buttons a {
+  color: rgba(51, 51, 51, 0.6);
+  font-size: 14px;
 }
 
-.Please-login
-{
-  font-size: 28px;
-  font: 'Playfair Display', roboto;
-  color: white;
+.sign-up {
+  margin: 60px 0 0;
+  font-size: 14px;
+  text-align: center;
+}
+.sign-up a {
+  color: #8c7569;
 }
 
-.login-heading {
-  font-size: 32px;
-  font: 'Playfair Display', roboto;
-  color: white;
+.input-button {
+	position: relative;
+  left: 00px;
+  bottom: 33px;
+  
+  padding: 8px 12px;
+  outline: none;
+  border: 0;
+  color: #fff;
+  border-radius: 4px;
+  background: #62757f;
+  font-family: "Nunito", sans-serif;
+  
+  cursor: pointer;
+}
+.input-button:hover {
+  background: #90a4ae;
 }
 
-.input-txt {
-  width: 100%;
-
-  opacity: 0.6;
-  padding: 20px 10px;
-  background: #011E41;
-  border: none;
-  font-size: 1em;
-  color: white;
-  border-bottom: 1px dotted rgba(250, 250, 250, 0.4);
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  -moz-transition: background-color 0.5s ease-in-out;
-  -o-transition: background-color 0.5s ease-in-out;
-  -webkit-transition: background-color 0.5s ease-in-out;
-  transition: background-color 0.5s ease-in-out;
-}
-.input-txt:-moz-placeholder {
-  color: #81aac9;
-}
-.input-txt:-ms-input-placeholder {
-  color: #011E41;
-}
-.input-txt::-webkit-input-placeholder {
-  color: #81aac9;
-}
-.input-txt:focus {
-  background-color: #4478a0;
+.input-label {
+  font-size: 11px;
+  text-transform: uppercase;
+  font-family: "Nunito", sans-serif;
+  font-weight: 600;
+  letter-spacing: 0.7px;
+  color: #4b636e;
+  
 }
 
-.login-footer {
-  margin: 10px 0;
-  overlow: hidden;
-  float: left;
-  width: 100%;
+.input-block {
+  display: flex;
+  flex-direction: column;
+  padding: 10px 10px 8px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  margin-bottom: 20px;
+
+}
+.input-block input {
+  outline: 0;
+  border: 0;
+  padding: 4px 0 0;
+  font-size: 14px;
+  font-family: "Nunito", sans-serif;
+}
+.input-block input::-webkit-input-placeholder {
+  color: #ccc;
+  opacity: 1;
+}
+.input-block input:-ms-input-placeholder {
+  color: #ccc;
+  opacity: 1;
+}
+.input-block input::-ms-input-placeholder {
+  color: #ccc;
+  opacity: 1;
+}
+.input-block input::placeholder {
+  color: #ccc;
+  opacity: 1;
+}
+.input-block:focus-within {
+  border-color: #8c7569;
+}
+.input-block:focus-within .input-label {
+  color: rgba(140, 117, 105, 0.8);
 }
 
-.btn {
-  padding: 15px 30px;
-  border: none;
-  background: white;
-  color: #5D92BA;
+.icon-button {
+  outline: 0;
+  position: absolute;
+  right: 10px;
+  top: 12px;
+  width: 32px;
+  height: 32px;
+  border: 0;
+  background: 0;
+  padding: 0;
+  cursor: pointer;
 }
 
-.btn--right {
-  float: right;
-}
+.sraiimg {
+  width: 100px;
+  height: 100px;
+  }
 
-.icon {
-  display: inline-block;
-}
 
-.icon--min {
-  font-size: .9em;
-}
 
-.lnk {
-  font-size: .8em;
-  line-height: 3em;
-  color: white;
-  text-decoration: none;
+@media (max-width: 750px) {
+  .modal-container {
+    width: 90%;
+  }
+
+  .modal-right {
+    display: none;
+  }
 }
