--- a/css/style.css
+++ b/css/style.css
@@ -97,9 +97,10 @@ body {
   pointer-events: auto;
 
 }
-.modal.is-open .modal-right img {
 
-}
+/*.modal.is-open .modal-right img {
+
+}*/
 .modal.is-open .modal-left {
 
   opacity: 1;
@@ -220,4 +221,23 @@ body {
   .modal-right {
     display: none;
   }
+}
+
+.alert {
+  position: relative;
+  padding: 0.75rem 1.25rem;
+  vertical-align: middle;
+    width: 150px;
+  /*margin-bottom: 1rem;*/
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+}
+
+.alert-danger {
+  color: #721c24;
+  font: roboto;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+  font-size: 12px;
+  font: 400 13.3333px Arial;
 }
